--- a/常见问题.md
+++ b/常见问题.md
@@ -34,10 +34,9 @@ kubernetes-dashboard   kubernetes-dashboard-665f4c5ff-czc7p         1/1     Runn
 vim /etc/kubernetes/manifests/kube-scheduler.yaml
 vim /etc/kubernetes/manifests/kube-controller-manager.yaml
 # 修改配置文件将
-# spec:
-#  containers:
-#  - command:
-#    - --port=0 #将此行去掉
+spec:
+ containers:
+ - command:
+   - --port=0 #将此行去掉
 ```
-
 * 重启服务systemctl restart kubelet
