--- a/1 基础概念/1.3.1 Master.md
+++ b/1 基础概念/1.3.1 Master.md
@@ -1,6 +1,9 @@
 ### Master
-> Kubenetes 里的Master指的是集群控制节点，每个Kubenetes 集群里需要有一个Master 节点来负责整个集群的管理和控制，基本上 Kubenetes 的所有控制命令都发给它，它来负责具体的执行过程。
+> Kubernetes 里的Master指的是集群控制节点，每个Kubernetes 集群里需要有一个Master 节点来负责整个集群的管理和控制，基本上 Kubernetes 的所有控制命令都发给它，它来负责具体的执行过程。
 
 Master 节点上运行着一下一组关键进程
-* Kubenetes API Server（kube-apiserver）：提供HTTP REST 接口的关键服务进程，是Kubenetes 里所有资源的增删查改等操作的唯一入口，也是集群控制的入口进程。
-* Kubenetes Cont
+* Kubernetes API Server（kube-apiserver）：提供HTTP REST 接口的关键服务进程，是Kubernetes 里所有资源的增删查改等操作的唯一入口，也是集群控制的入口进程。
+* Kubernetes Controller Manager（kube-controller-manager）：Kubernetes 里所有资源对象的自动化控制中心，可以理解为资源对象的“大总管”
+* Kubernates Scheduler（kube-scheduler）：负责资源调度（pod调度）的进程
+
+> 另外，在Master节点上还需要启动一个etcd服务，因为kubernetes 里的所有资源对象的数据全部是保存在etcd中的。
